# Gazebo-simulation-of-a-flapping-wing-bot

./: CMakeLists.txt  README.md  package.xml
include/: flapping_controller.h  flight_controller_gui.h  lift_drag_plugin.h  pitching_controller.h  rolling_controller.h  ui_test1.h
launch/: simple.launch
models/: temp
models/bird2/: model.config  model.sdf
models/bird2/meshes/: link_0.STL  link_1.STL  link_10.STL  link_2.STL  link_3.STL  link_4.STL  link_5.STL  link_6.STL  link_7.STL  link_8.STL  link_9.STL
src/: flapping_controller.cpp  flight_controller_gui.cpp  lift_drag_plugin.cpp  pitching_controller.cpp  rolling_controller.cpp  test1.ui
worlds/: simple.world
